[metadata]
name = schemdule
version = 0.0.1preview1
author = StardustDL
author_email = stardustdl@163.com
description = A tiny tool using script for schema to schedule one day and remind you to do something during a day.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/StardustDL/schemdule
project_urls =
    Bug Tracker = https://github.com/StardustDL/schemdule/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src