[metadata]
name = schemdule
version = 0.0.3
author = StardustDL
author_email = stardustdl@163.com
description = A tiny tool using script as schema to schedule one day and remind you to do something during a day.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/StardustDL/schemdule
project_urls =
    Source Code = https://github.com/StardustDL/schemdule
    Changes = https://github.com/StardustDL/schemdule
    Documentation = https://github.com/StardustDL/schemdule
    Bug Tracker = https://github.com/StardustDL/schemdule/issues
classifiers =
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    click>=8.0.1
    enlighten>=1.10.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    schemdule = schemdule.__main__:main