[metadata]
name = schemdule-extensions-audioplay
version = attr: schemdule.extensions.audioplay.__version__
author = StardustDL
author_email = stardustdl@163.com
description = A audio player extension for schemdule.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/StardustDL/schemdule
project_urls =
    Source Code = https://github.com/StardustDL/schemdule
    Changes = https://github.com/StardustDL/schemdule/releases
    Documentation = https://github.com/StardustDL/schemdule
    Bug Tracker = https://github.com/StardustDL/schemdule/issues
classifiers =
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities

[options]
packages = find_namespace:
python_requires = >=3.7
install_requires = 
    schemdule>=0.0.11
    pydub>=0.25.1
    simpleaudio>=1.0.4